# askama

./: Cargo.toml  README.md
askama/: Cargo.toml
askama/src/: lib.rs
askama_derive/: Cargo.toml  README.md
askama_derive/src/: lib.rs
askama_escape/: Cargo.toml
askama_patched/: Cargo.toml
askama_patched/src/: lib.rs
askama_patched_derive/: Cargo.toml
askama_patched_derive/src/: lib.rs
askama_patched_escape/: Cargo.toml  README.md
askama_patched_escape/benches/: all.rs
askama_patched_shared/: Cargo.toml
askama_patched_shared/src/: lib.rs
askama_patched_shared/src/filters/: json.rs  mod.rs  yaml.rs
askama_shared/: Cargo.toml  README.md
askama_shared/src/: generator.rs  heritage.rs  lib.rs  parser.rs
testing/: Cargo.toml
testing/templates/: stripspace-included.html  stripspace-macros.html  stripspace.html
testing/tests/: simple.rs  stripspace.rs
