[package]
name = "askama_patched_derive"
version = "0.10.5"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>", "Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "[patched fork] Procedural macro package for Askama"
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[features]
actix-web = []
gotham = []
iron = []
mendes = []
rocket = []
tide = []
warp = []

[dependencies]
askama_shared = { package = "askama_patched_shared", version = "0.11", path = "../askama_shared" }
proc-macro2 = "1"
syn = "1"
