[package]
name = "askama_patched"
version = "0.10.5"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>", "Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "[patched fork] Type-safe, compiled Jinja-like templates for Rust"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
documentation = "https://docs.rs/askama_patched"
homepage = "https://github.com/cipriancraciun/askama"
repository = "https://github.com/cipriancraciun/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["config", "humansize", "num-traits", "urlencode"]
config = ["askama_patched_shared/config"]
humansize = ["askama_patched_shared/humansize"]
urlencode = ["askama_patched_shared/percent-encoding"]
serde-json = ["askama_patched_shared/json"]
serde-yaml = ["askama_patched_shared/yaml"]
num-traits = ["askama_patched_shared/num-traits"]
with-actix-web = ["askama_patched_derive/actix-web"]
with-gotham = ["askama_patched_derive/gotham"]
with-iron = ["askama_patched_derive/iron"]
with-mendes = ["askama_patched_derive/mendes"]
with-rocket = ["askama_patched_derive/rocket"]
with-tide = ["askama_patched_derive/tide"]
with-warp = ["askama_patched_derive/warp"]

[dependencies]
askama_patched_derive = { version = "0.10", path = "../askama_patched_derive" }
askama_patched_escape = { version = "0.10", path = "../askama_patched_escape" }
askama_patched_shared = { version = "0.11", path = "../askama_patched_shared", default-features = false }
mime = { version = "0.3", optional = true }
mime_guess = { version = "2.0.0-alpha", optional = true }

[package.metadata.docs.rs]
features = ["config", "humansize", "num-traits", "serde-json", "serde-yaml"]
