[package]
name = "askama_patched_escape"
version = "0.10.1"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>", "Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "[patched fork] Optimized HTML escaping code, extracted from Askama"
keywords = ["html", "escaping"]
documentation = "https://docs.rs/askama_patched_escape"
homepage = "https://github.com/cipriancraciun/askama"
repository = "https://github.com/cipriancraciun/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all"
harness = false
