[package]
name = "askama_patched_testing"
version = "0.1.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>", "Dirkjan Ochtman <dirkjan@ochtman.nl>"]
workspace = ".."
edition = "2018"
publish = false

[features]
default = ["serde_json", "askama/serde-json"]

[dependencies]
askama = { package = "askama_patched", path = "../askama", version = "*" }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
trybuild = "1.0"

[[bench]]
name = "all"
harness = false
